
[TestGoServerPyClient/TestEncryption - 1]
API version: APIVersion(major=1, minor=10)
Device info: DeviceInfo(uses_password=False, name='testABC', friendly_name='Testing ABC', mac_address='<mac>', compilation_time='2022', model='<goos>/<goarch>', manufacturer='gosthome', has_deep_sleep=False, esphome_version='<esphome_version>', project_name='', project_version='', webserver_port=0, legacy_voice_assistant_version=0, voice_assistant_feature_flags=0, legacy_bluetooth_proxy_version=0, bluetooth_proxy_feature_flags=0, suggested_area='')

Entities:
- BinarySensorInfo(object_id='demo_movement_backyard', key=1756138606, name='Demo Movement Backyard', unique_id='testABCbinary_sensordemo_movement_backyard', disabled_by_default=False, icon='', entity_category=<EntityCategory.NONE: 0>, <gosthome_version>ice_class='motion', is_status_binary_sensor=False)
- BinarySensorInfo(object_id='demo_basement_floor_wet', key=2292024046, name='Demo Basement Floor Wet', unique_id='testABCbinary_sensordemo_basement_floor_wet', disabled_by_default=False, icon='', entity_category=<EntityCategory.NONE: 0>, <gosthome_version>ice_class='moisture', is_status_binary_sensor=False)
- ButtonInfo(object_id='demo_regenerate_seed', key=258008683, name='Demo Regenerate Seed', unique_id='testABCbuttondemo_regenerate_seed', disabled_by_default=False, icon='', entity_category=<EntityCategory.CONFIG: 1>, <gosthome_version>ice_class='restart')
- ButtonInfo(object_id='demo_regenerate_seed_config', key=1323890508, name='Demo Regenerate Seed Config', unique_id='testABCbuttondemo_regenerate_seed_config', disabled_by_default=False, icon='', entity_category=<EntityCategory.CONFIG: 1>, <gosthome_version>ice_class='restart')

State:
- BinarySensorState(key=1756138606, state=False, missing_state=False)
- BinarySensorState(key=2292024046, state=False, missing_state=False)

---

[TestGoServerPyClient/TestEncryptionAndPassword - 1]
API version: APIVersion(major=1, minor=10)
Device info: DeviceInfo(uses_password=True, name='testABC', friendly_name='Testing ABC', mac_address='<mac>', compilation_time='2022', model='<goos>/<goarch>', manufacturer='gosthome', has_deep_sleep=False, esphome_version='<esphome_version>', project_name='', project_version='', webserver_port=0, legacy_voice_assistant_version=0, voice_assistant_feature_flags=0, legacy_bluetooth_proxy_version=0, bluetooth_proxy_feature_flags=0, suggested_area='')

Entities:
- BinarySensorInfo(object_id='demo_movement_backyard', key=1756138606, name='Demo Movement Backyard', unique_id='testABCbinary_sensordemo_movement_backyard', disabled_by_default=False, icon='', entity_category=<EntityCategory.NONE: 0>, <gosthome_version>ice_class='motion', is_status_binary_sensor=False)
- BinarySensorInfo(object_id='demo_basement_floor_wet', key=2292024046, name='Demo Basement Floor Wet', unique_id='testABCbinary_sensordemo_basement_floor_wet', disabled_by_default=False, icon='', entity_category=<EntityCategory.NONE: 0>, <gosthome_version>ice_class='moisture', is_status_binary_sensor=False)
- ButtonInfo(object_id='demo_regenerate_seed', key=258008683, name='Demo Regenerate Seed', unique_id='testABCbuttondemo_regenerate_seed', disabled_by_default=False, icon='', entity_category=<EntityCategory.CONFIG: 1>, <gosthome_version>ice_class='restart')
- ButtonInfo(object_id='demo_regenerate_seed_config', key=1323890508, name='Demo Regenerate Seed Config', unique_id='testABCbuttondemo_regenerate_seed_config', disabled_by_default=False, icon='', entity_category=<EntityCategory.CONFIG: 1>, <gosthome_version>ice_class='restart')

State:
- BinarySensorState(key=1756138606, state=False, missing_state=False)
- BinarySensorState(key=2292024046, state=False, missing_state=False)

---

[TestGoServerPyClient/TestPassword - 1]
API version: APIVersion(major=1, minor=10)
Device info: DeviceInfo(uses_password=True, name='testABC', friendly_name='Testing ABC', mac_address='<mac>', compilation_time='2022', model='<goos>/<goarch>', manufacturer='gosthome', has_deep_sleep=False, esphome_version='<esphome_version>', project_name='', project_version='', webserver_port=0, legacy_voice_assistant_version=0, voice_assistant_feature_flags=0, legacy_bluetooth_proxy_version=0, bluetooth_proxy_feature_flags=0, suggested_area='')

Entities:
- BinarySensorInfo(object_id='demo_movement_backyard', key=1756138606, name='Demo Movement Backyard', unique_id='testABCbinary_sensordemo_movement_backyard', disabled_by_default=False, icon='', entity_category=<EntityCategory.NONE: 0>, <gosthome_version>ice_class='motion', is_status_binary_sensor=False)
- BinarySensorInfo(object_id='demo_basement_floor_wet', key=2292024046, name='Demo Basement Floor Wet', unique_id='testABCbinary_sensordemo_basement_floor_wet', disabled_by_default=False, icon='', entity_category=<EntityCategory.NONE: 0>, <gosthome_version>ice_class='moisture', is_status_binary_sensor=False)
- ButtonInfo(object_id='demo_regenerate_seed', key=258008683, name='Demo Regenerate Seed', unique_id='testABCbuttondemo_regenerate_seed', disabled_by_default=False, icon='', entity_category=<EntityCategory.CONFIG: 1>, <gosthome_version>ice_class='restart')
- ButtonInfo(object_id='demo_regenerate_seed_config', key=1323890508, name='Demo Regenerate Seed Config', unique_id='testABCbuttondemo_regenerate_seed_config', disabled_by_default=False, icon='', entity_category=<EntityCategory.CONFIG: 1>, <gosthome_version>ice_class='restart')

State:
- BinarySensorState(key=1756138606, state=False, missing_state=False)
- BinarySensorState(key=2292024046, state=False, missing_state=False)

---
